[gd_scene load_steps=73 format=3 uid="uid://e2ka0xsp4qif"]

[ext_resource type="Texture2D" uid="uid://bwwu41kj7x0sd" path="res://sprites/sprintIcon.png" id="1"]
[ext_resource type="Script" path="res://scripts/HUD.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dmrlvub2e8xhs" path="res://sprites/holdingPistol.png" id="3"]
[ext_resource type="Texture2D" uid="uid://b8npgjlmodbm2" path="res://animations/fillingBar/fillingBar-0002.png" id="4"]
[ext_resource type="Texture2D" uid="uid://boqtvp58jyatn" path="res://animations/fillingBar/fillingBar-0005.png" id="5"]
[ext_resource type="Texture2D" uid="uid://d0jk0uthxa03a" path="res://animations/fillingBar/fillingBar-0010.png" id="6"]
[ext_resource type="Texture2D" uid="uid://b8t84mahknoxh" path="res://animations/fillingBar/fillingBar-0012.png" id="7"]
[ext_resource type="Texture2D" uid="uid://b43eww1dgvnb8" path="res://animations/fillingBar/fillingBar-0001.png" id="8"]
[ext_resource type="Texture2D" uid="uid://bd31tmkoreau1" path="res://animations/fillingBar/fillingBar-0006.png" id="9"]
[ext_resource type="Texture2D" uid="uid://da3kge5drt3at" path="res://animations/fillingBar/fillingBar-0013.png" id="10"]
[ext_resource type="Texture2D" uid="uid://3vkxn1jnqrrj" path="res://animations/fillingBar/fillingBar-0014.png" id="11"]
[ext_resource type="Texture2D" uid="uid://cycqggk0usm8b" path="res://animations/fillingBar/fillingBar-0004.png" id="12"]
[ext_resource type="Texture2D" uid="uid://beekl7hcbnvy7" path="res://animations/fillingBar/fillingBar-0016.png" id="13"]
[ext_resource type="Texture2D" uid="uid://b1ue2prtwca0p" path="res://animations/fillingBar/fillingBar-0019.png" id="14"]
[ext_resource type="Texture2D" uid="uid://dx75c2d645yuc" path="res://animations/fillingBar/fillingBar-0009.png" id="15"]
[ext_resource type="Texture2D" uid="uid://d0iq6gos1w4os" path="res://animations/fillingBar/fillingBar-0008.png" id="16"]
[ext_resource type="Texture2D" uid="uid://bq1o5mrgn7xcv" path="res://animations/fillingBar/fillingBar-0011.png" id="17"]
[ext_resource type="Texture2D" uid="uid://bhaw515irpsof" path="res://animations/fillingBar/fillingBar-0020.png" id="18"]
[ext_resource type="Texture2D" uid="uid://6cocvqbvooiu" path="res://animations/fillingBar/fillingBar-0022.png" id="19"]
[ext_resource type="Texture2D" uid="uid://xjhrmn3kscdn" path="res://animations/fillingBar/fillingBar-0023.png" id="20"]
[ext_resource type="Texture2D" uid="uid://dtjmfm4cmwwgl" path="res://animations/fillingBar/fillingBar-0024.png" id="21"]
[ext_resource type="Texture2D" uid="uid://77cd0cw1ukdi" path="res://animations/fillingBar/fillingBar-0025.png" id="22"]
[ext_resource type="Texture2D" uid="uid://b03a5qk8dfod8" path="res://animations/fillingBar/fillingBar-0015.png" id="23"]
[ext_resource type="Texture2D" uid="uid://dbp3vke6wpqb1" path="res://animations/fillingBar/fillingBar-0018.png" id="24"]
[ext_resource type="Texture2D" uid="uid://bvny32r3fhh4w" path="res://animations/fillingBar/fillingBar-0021.png" id="25"]
[ext_resource type="Texture2D" uid="uid://bsv0rldfq4cvl" path="res://animations/fillingBar/fillingBar-0007.png" id="26"]
[ext_resource type="Texture2D" uid="uid://by3cahc0jgl45" path="res://animations/fillingBar/fillingBar-0017.png" id="27"]
[ext_resource type="Texture2D" uid="uid://bubikjvxra54n" path="res://animations/fillingBar/fillingBar-0026.png" id="28"]
[ext_resource type="Texture2D" uid="uid://37vf8jigrpk1" path="res://animations/fillingBar/fillingBar-0003.png" id="29"]
[ext_resource type="Texture2D" uid="uid://cvdrp0uievjn6" path="res://animations/fillingBar/fillingBar-0027.png" id="30"]
[ext_resource type="Texture2D" uid="uid://t8jxxuf3veoi" path="res://animations/fillingBar/fillingBar-0028.png" id="31"]
[ext_resource type="Texture2D" uid="uid://cxbmdpuy6fdhu" path="res://animations/fillingBar/fillingBar-0061.png" id="32"]
[ext_resource type="Texture2D" uid="uid://b116t3dwcheaq" path="res://animations/fillingBar/fillingBar-0036.png" id="33"]
[ext_resource type="Texture2D" uid="uid://bgnftikqwmon0" path="res://animations/fillingBar/fillingBar-0055.png" id="34"]
[ext_resource type="Texture2D" uid="uid://bei0x6ahwxera" path="res://animations/fillingBar/fillingBar-0047.png" id="35"]
[ext_resource type="Texture2D" uid="uid://c2lkhiif82o5h" path="res://animations/fillingBar/fillingBar-0050.png" id="36"]
[ext_resource type="Texture2D" uid="uid://ybl5sobr6onk" path="res://animations/fillingBar/fillingBar-0037.png" id="37"]
[ext_resource type="Texture2D" uid="uid://clukrumvo7e6l" path="res://animations/fillingBar/fillingBar-0048.png" id="38"]
[ext_resource type="Texture2D" uid="uid://bcgugopnw2qr6" path="res://animations/fillingBar/fillingBar-0038.png" id="39"]
[ext_resource type="Texture2D" uid="uid://cuesrsweb3x06" path="res://animations/fillingBar/fillingBar-0039.png" id="40"]
[ext_resource type="Texture2D" uid="uid://c2i1n1bavvghe" path="res://animations/fillingBar/fillingBar-0034.png" id="41"]
[ext_resource type="Texture2D" uid="uid://dh8vyv3lavq6c" path="res://animations/fillingBar/fillingBar-0062.png" id="42"]
[ext_resource type="Texture2D" uid="uid://dit3tnpujlueq" path="res://animations/fillingBar/fillingBar-0049.png" id="43"]
[ext_resource type="Texture2D" uid="uid://78bfxbscnhqi" path="res://animations/fillingBar/fillingBar-0063.png" id="44"]
[ext_resource type="Texture2D" uid="uid://bm2btrwficsi2" path="res://animations/fillingBar/fillingBar-0044.png" id="45"]
[ext_resource type="Texture2D" uid="uid://c2wgcas4opsjt" path="res://animations/fillingBar/fillingBar-0060.png" id="46"]
[ext_resource type="Texture2D" uid="uid://chvv6h1jtniq8" path="res://animations/fillingBar/fillingBar-0052.png" id="47"]
[ext_resource type="Texture2D" uid="uid://bnxybbv4vgyr3" path="res://animations/fillingBar/fillingBar-0056.png" id="48"]
[ext_resource type="Texture2D" uid="uid://dofva7aj0w65k" path="res://animations/fillingBar/fillingBar-0053.png" id="49"]
[ext_resource type="Texture2D" uid="uid://7lc151bgh7hl" path="res://animations/fillingBar/fillingBar-0051.png" id="50"]
[ext_resource type="Texture2D" uid="uid://ej1wtpk2argg" path="res://animations/fillingBar/fillingBar-0041.png" id="51"]
[ext_resource type="Texture2D" uid="uid://b3mni66obms1j" path="res://animations/fillingBar/fillingBar-0032.png" id="52"]
[ext_resource type="Texture2D" uid="uid://ba1g66sfng5dn" path="res://animations/fillingBar/fillingBar-0058.png" id="53"]
[ext_resource type="Texture2D" uid="uid://cotxj82287327" path="res://animations/fillingBar/fillingBar-0040.png" id="54"]
[ext_resource type="Texture2D" uid="uid://denx7s4v1ij16" path="res://animations/fillingBar/fillingBar-0059.png" id="55"]
[ext_resource type="Texture2D" uid="uid://daep1ekwybxqw" path="res://animations/fillingBar/fillingBar-0029.png" id="56"]
[ext_resource type="Texture2D" uid="uid://bbvtxdr4e2xd0" path="res://animations/fillingBar/fillingBar-0042.png" id="57"]
[ext_resource type="Texture2D" uid="uid://ufkmy7o458oc" path="res://animations/fillingBar/fillingBar-0031.png" id="58"]
[ext_resource type="Texture2D" uid="uid://chwwswsk3otu5" path="res://animations/fillingBar/fillingBar-0046.png" id="59"]
[ext_resource type="Texture2D" uid="uid://c72f51qlmlc8m" path="res://animations/fillingBar/fillingBar-0057.png" id="60"]
[ext_resource type="Texture2D" uid="uid://dg2ap5uqmev4t" path="res://animations/fillingBar/fillingBar-0035.png" id="61"]
[ext_resource type="Texture2D" uid="uid://b6715tpnsods6" path="res://animations/fillingBar/fillingBar-0030.png" id="62"]
[ext_resource type="Texture2D" uid="uid://t63mh6ly7jag" path="res://animations/fillingBar/fillingBar-0043.png" id="63"]
[ext_resource type="Texture2D" uid="uid://bghgre7xdc5yd" path="res://animations/fillingBar/fillingBar-0054.png" id="64"]
[ext_resource type="Texture2D" uid="uid://dxt64re31x1qn" path="res://animations/fillingBar/fillingBar-0045.png" id="65"]
[ext_resource type="Texture2D" uid="uid://bh3oal3tfjuny" path="res://animations/fillingBar/fillingBar-0033.png" id="66"]
[ext_resource type="PackedScene" uid="uid://cvp5df88bctju" path="res://menus/pauseMenu.tscn" id="67"]
[ext_resource type="AudioStream" uid="uid://bwoylvdc2lmks" path="res://sounds/menu sounds/nextWave.ogg" id="68_e7u8w"]
[ext_resource type="AudioStream" uid="uid://cs8nr3gwviiu2" path="res://sounds/menu sounds/waveComplete.ogg" id="69_jerv6"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8")
}, {
"duration": 1.0,
"texture": ExtResource("4")
}, {
"duration": 1.0,
"texture": ExtResource("29")
}, {
"duration": 1.0,
"texture": ExtResource("12")
}, {
"duration": 1.0,
"texture": ExtResource("5")
}, {
"duration": 1.0,
"texture": ExtResource("9")
}, {
"duration": 1.0,
"texture": ExtResource("26")
}, {
"duration": 1.0,
"texture": ExtResource("16")
}, {
"duration": 1.0,
"texture": ExtResource("15")
}, {
"duration": 1.0,
"texture": ExtResource("6")
}, {
"duration": 1.0,
"texture": ExtResource("17")
}, {
"duration": 1.0,
"texture": ExtResource("7")
}, {
"duration": 1.0,
"texture": ExtResource("10")
}, {
"duration": 1.0,
"texture": ExtResource("11")
}, {
"duration": 1.0,
"texture": ExtResource("23")
}, {
"duration": 1.0,
"texture": ExtResource("13")
}, {
"duration": 1.0,
"texture": ExtResource("27")
}, {
"duration": 1.0,
"texture": ExtResource("24")
}, {
"duration": 1.0,
"texture": ExtResource("14")
}, {
"duration": 1.0,
"texture": ExtResource("18")
}, {
"duration": 1.0,
"texture": ExtResource("25")
}, {
"duration": 1.0,
"texture": ExtResource("19")
}, {
"duration": 1.0,
"texture": ExtResource("20")
}, {
"duration": 1.0,
"texture": ExtResource("21")
}, {
"duration": 1.0,
"texture": ExtResource("22")
}, {
"duration": 1.0,
"texture": ExtResource("28")
}, {
"duration": 1.0,
"texture": ExtResource("30")
}, {
"duration": 1.0,
"texture": ExtResource("31")
}, {
"duration": 1.0,
"texture": ExtResource("56")
}, {
"duration": 1.0,
"texture": ExtResource("62")
}, {
"duration": 1.0,
"texture": ExtResource("58")
}, {
"duration": 1.0,
"texture": ExtResource("52")
}, {
"duration": 1.0,
"texture": ExtResource("66")
}, {
"duration": 1.0,
"texture": ExtResource("41")
}, {
"duration": 1.0,
"texture": ExtResource("61")
}, {
"duration": 1.0,
"texture": ExtResource("33")
}, {
"duration": 1.0,
"texture": ExtResource("37")
}, {
"duration": 1.0,
"texture": ExtResource("39")
}, {
"duration": 1.0,
"texture": ExtResource("40")
}, {
"duration": 1.0,
"texture": ExtResource("54")
}, {
"duration": 1.0,
"texture": ExtResource("51")
}, {
"duration": 1.0,
"texture": ExtResource("57")
}, {
"duration": 1.0,
"texture": ExtResource("63")
}, {
"duration": 1.0,
"texture": ExtResource("45")
}, {
"duration": 1.0,
"texture": ExtResource("65")
}, {
"duration": 1.0,
"texture": ExtResource("59")
}, {
"duration": 1.0,
"texture": ExtResource("35")
}, {
"duration": 1.0,
"texture": ExtResource("38")
}, {
"duration": 1.0,
"texture": ExtResource("43")
}, {
"duration": 1.0,
"texture": ExtResource("36")
}, {
"duration": 1.0,
"texture": ExtResource("50")
}, {
"duration": 1.0,
"texture": ExtResource("47")
}, {
"duration": 1.0,
"texture": ExtResource("49")
}, {
"duration": 1.0,
"texture": ExtResource("64")
}, {
"duration": 1.0,
"texture": ExtResource("34")
}, {
"duration": 1.0,
"texture": ExtResource("48")
}, {
"duration": 1.0,
"texture": ExtResource("60")
}, {
"duration": 1.0,
"texture": ExtResource("53")
}, {
"duration": 1.0,
"texture": ExtResource("55")
}, {
"duration": 1.0,
"texture": ExtResource("46")
}, {
"duration": 1.0,
"texture": ExtResource("32")
}, {
"duration": 1.0,
"texture": ExtResource("42")
}, {
"duration": 1.0,
"texture": ExtResource("44")
}],
"loop": false,
"name": &"fillingBar",
"speed": 1.0
}]

[sub_resource type="Animation" id="2"]
resource_name = "fadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fp4qv"]
_data = {
"fadeOut": SubResource("2")
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource("2")

[node name="pauseMenu" parent="." instance=ExtResource("67")]
visible = false

[node name="sprinting" type="Sprite2D" parent="."]
visible = false
position = Vector2(120, 462)
scale = Vector2(0.5, 0.687501)
texture = ExtResource("1")

[node name="sprintingLabel" type="Label" parent="sprinting"]
anchors_preset = -1
anchor_left = -3.25
anchor_top = -10.0
anchor_right = 1.25
anchor_bottom = 6.364
offset_left = 144.0
offset_top = 584.727
offset_right = -74.0
offset_bottom = -448.569
scale = Vector2(2, 2)
size_flags_vertical = 3
text = "Sprinting"
uppercase = true

[node name="status" type="Label" parent="."]
anchors_preset = -1
anchor_top = 0.011
anchor_right = 0.144
anchor_bottom = 1.0
offset_left = 57.0
offset_top = 487.08
offset_right = 1.53598
offset_bottom = -184.16
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 6

[node name="healthText" type="Label" parent="status"]
layout_mode = 0
offset_left = 47.48
offset_top = 3.44
offset_right = 100.48
offset_bottom = 17.44
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "100"

[node name="ammoText" type="Label" parent="status"]
layout_mode = 0
offset_left = 47.48
offset_top = 23.44
offset_right = 100.48
offset_bottom = 37.44
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "10"

[node name="zombieCount" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -696.0
offset_top = -71.9999
offset_right = -624.0
offset_bottom = -57.9999
scale = Vector2(1.5, 1.5)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Zombies: 3"

[node name="killCount" type="Label" parent="zombieCount"]
layout_mode = 0
anchor_top = 0.0296614
anchor_right = 1.0
anchor_bottom = 1.02966
offset_top = 18.0
offset_right = 0.0211716
offset_bottom = -23.3282
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Killed: 0"

[node name="controls" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.45
anchor_right = 0.525
anchor_bottom = 1.0
offset_top = 144.0
offset_right = 5.99982
offset_bottom = -256.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Move: WASD
Shoot: Left click
Sprint: Shift
Reload: R
Pause: Esc
1 - 9: Weapons












"

[node name="player sprite (to test)" type="Sprite2D" parent="."]
visible = false
position = Vector2(640, 360)
texture = ExtResource("3")

[node name="reloading" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.469
anchor_top = 0.426
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.32007
offset_top = -2.72006
offset_right = -614.0
offset_bottom = -402.0
text = "Reloading..."

[node name="reloadingAnimation" type="AnimatedSprite2D" parent="reloading"]
position = Vector2(37, -8)
scale = Vector2(1.15625, 1)
sprite_frames = SubResource("1")
animation = &"fillingBar"

[node name="rToReload" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.456
anchor_top = 0.422
anchor_right = 0.994
anchor_bottom = 1.0
offset_left = 8.31995
offset_top = 0.159973
offset_right = -606.32
offset_bottom = -402.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "'R' to reload"

[node name="fadeOut" type="AnimationPlayer" parent="rToReload"]
libraries = {
"": SubResource("AnimationLibrary_fp4qv")
}

[node name="wave" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.462
anchor_right = 0.522
anchor_bottom = 1.0
offset_left = 0.640015
offset_top = 32.0
offset_right = -25.16
offset_bottom = -674.0
scale = Vector2(1.5, 1.5)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Wave: 1"

[node name="nextWaveButton" type="Button" parent="."]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -152.0
offset_top = 24.0
offset_right = -26.0
offset_bottom = 88.0
text = "Next wave"

[node name="nextWaveSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("68_e7u8w")
bus = &"menu sounds"

[node name="waveCompleteSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("69_jerv6")
volume_db = -3.0
bus = &"menu sounds"

[connection signal="mouse_entered" from="nextWaveButton" to="." method="_on_nextWaveButton_mouse_entered"]
[connection signal="mouse_exited" from="nextWaveButton" to="." method="_on_nextWaveButton_mouse_exited"]
[connection signal="pressed" from="nextWaveButton" to="." method="_on_nextWaveButton_pressed"]
[connection signal="visibility_changed" from="nextWaveButton" to="." method="_on_nextWaveButton_visibility_changed"]
